Possible fix for scroll bar visible issue in print view

--- a/src/main/webapp/stylesheets/printview.css
+++ b/src/main/webapp/stylesheets/printview.css
@@ -3,6 +3,8 @@
 	display: none;
 }
 
-input:placeholder-shown {
-    display: none;
+overflow:hidden !important;
+
+#results-search-box:invalid {
+	display:none;
 }
